more work on widths, should work on smaller scvreens too now fixed text mistakes introduced "DEV_MODE", switch variable

--- a/public/css/base.styl
+++ b/public/css/base.styl
@@ -11,7 +11,7 @@ body
   background-image url(../images/stripes.png)
 
 #wrap
-  min-width 400px
+  min-width 200px
   max-width 1200px
   margin 0 auto
   margin-top 2em
@@ -64,10 +64,10 @@ h4
   margin-top 2em
 
 p
-  max-width auto
+  max-width 60em
 
 footer p
-  width auto
+  max-width none
 
 /* components */
 nav.home #home a
@@ -99,12 +99,13 @@ nav.maps #maps a
   border-bottom none
   border-radius 8px 8px 0 0
   font-size 1.2em
-  vertical-align  bottom
+  vertical-align bottom
+  background-image linear-gradient(#f0f0f0, #b4b4b4)
 
 .flaps.selected-h1 .h1
 .flaps.selected-npup .npup
   height 2em
-  background-color #f8f8f8
+  background-image linear-gradient(#fff, #d4d4d4)
 
 .flaps a
   display inline-block
